tests/valhalla/neg/IncorrectDeclaration.scala
import scala.annotation.valhalla

@valhalla
class A // error

@valhalla
trait T // error